--- a/index.html
+++ b/index.html
@@ -280,7 +280,6 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="style11">~$ pub -rl</span></p> 
 
-<p><span class="style11">&bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. <a href="paper/sc2022.pdf" style="text-decoration: none">STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training</a>. ACM/IEEE SC 2022 (accepted) </span></p>
 
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p>
 
@@ -307,6 +306,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="style11">&bull; R. Yang, Z. Wen, D. Mckee, T. Lin, J. Xu and P. Garraghan. <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091" style="text-decoration: none"> Software-Defined Fog Orchestration for IoT Services</a>. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1, 2020</span></p>
 
 <p><span class="style11">&bull; Z. Wen, R. Yang*, P. Garraghan, T. Lin, J. Xu and M. Rovatsos. <a href="paper/ic2017.pdf" style="text-decoration: none">Fog Orchestration for IoT Services</a>. IEEE Internet Computing, 2017  </span></p>
+
+<p><span class="style11">&bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. <a href="paper/sc2022.pdf" style="text-decoration: none">STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training</a>. ACM/IEEE SC 2022 (accepted) </span></p>
 
 <p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang and J. Xu. <a href="paper/ccgrid2021.pdf" style="text-decoration: none">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a> <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE/ACM CCGRID 2021 and ACM SoCC 2019 </span></p>
 
@@ -377,21 +378,23 @@ I had the opportunity to work closely with many institutes around the world and 
 I have been co-advising and/or working closely with many students mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.9- , BDBC and Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Yiming Hei (2019.9- , BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Yiming Hei (2019.9- , BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; MSc Students: Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, Uni. of Leeds, with Prof. Jie Xu and Dr. Satish Kumar) </span></p>
 <p><span class="style11">&bull; Also closely working Dr. Satish Kumar, Dr. Clément Mommessin </span></p>
 
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
 
+<p><span class="style11">&bull; Jianyong Zhu (PhD., 2017.9-2022.3 , BDBC and Beihang Uni., with Prof. Chunming Hu, first employment Assistant Professor at NCEPU)</span></p>
+<p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD., 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment at Huawei UK) </span></p>
+
 <p><span class="style11">&bull; Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, Uni. of Leeds, with Prof. Jie Xu) </span></p>
-<p><span class="style11">&bull; Gingfung Yeung (PhD., 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment at Huawei UK) </span></p>
 <p><span class="style11">&bull; Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
 
 <p><span class="style11">&bull; Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, 2020 Autumn, Uni. of Leeds)
 <p><span class="style11">&bull; Chris London (BSc, 2021, Uni. of Leeds, first employment at Permutive UK), Charlee Boyle (BSc, 2021, Uni. of Leeds, first employment at IBM UK), Sam Hepburn (BSc, 2021, Uni. of Leeds, first employment at Knowledge Integration Ltd. UK) </span></p>
 
-<p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds, with Prof. Jie Xu, first employment at CEO TaibahValley, KSA), Xiaochen Sun (2019.9-2020.9, Uni. of Leeds, Visiting PhD. Student from ISCAS, with Prof. Jie Xu) 
+<p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds, with Prof. Jie Xu, first employment CEO at TaibahValley, KSA), Xiaochen Sun (2019.9-2020.9, Uni. of Leeds, Visiting PhD. Student from ISCAS, with Prof. Jie Xu) 
 </span></p> 
 
 <p><span class="style11">&bull;  Shiqing Xue (2018.9-2020.12, Beihang Uni.), Dr. Qi Shen (2017.9-2019.8, Postdoc researcher, Beihang Uni.) 
@@ -443,7 +446,9 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI-2022.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC) </span></p>
 
-<p><span class="style11">&bull; Review Editor on the Editorial Board of Cybersecurity and Privacy, specialty section of Frontiers in Big Data </span></p>
+<p><span class="style11">&bull; Review Editor on the Editorial Board of Frontiers in Big Data </span></p>
+<p><span class="style11">&bull; Review Editor on the Editorial Board of Frontiers in High Performance Computing </span></p>
+
 
 <p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC) 2020, 2019, etc. </span></p>
 
@@ -502,7 +507,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">  Updated by March 2022 </span></p>
+<p><span class="style11">  Updated by June 2022 </span></p>
 
 </td>
 
