--- a/services.html
+++ b/services.html
@@ -101,34 +101,36 @@ p{ margin:10px auto}
 
 
 <p><span class="style11"><strong> (Co-) Chair/Editor:</strong></span></p>
-<p><span class="style11">&nbsp; Lead Guest Editor: "Massive-Scale Distributed Systems and Cloud Computing" Special Issue in the Big Data and Cognitive Computing Journal </span></p>
-<p><span class="style11">&nbsp; Review Editor on the Editorial Board of Cybersecurity and Privacy, specialty section of Frontiers in Big Data </span></p>
-<p><span class="style11">&nbsp; IEEE CLOUD 2021, Area Chair </span></p>
-<p><span class="style11">&nbsp; IEEE International Conference on Joint Cloud Computing (JCC), 2019, 2020, PC Co-Chair </span></p>
-<p><span class="style11">&nbsp; IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) PC Co-Chair </span></p>
+<p><span class="style11">&bull;  Lead Guest Editor: "Massive-Scale Distributed Systems and Cloud Computing" Special Issue in the Big Data and Cognitive Computing Journal, 2021.10 - present </span></p>
+<p><span class="style11">&bull;  Review Editor on the Editorial Board of Frontiers in Big Data, 2021.12 - present </span></p>
+<p><span class="style11">&bull; Review Editor on the Editorial Board of Frontiers in High Performance Computing, 2022.5 - present </span></p>
+
+<p><span class="style11">&bull;  IEEE CLOUD 2021, Area Chair </span></p>
+<p><span class="style11">&bull;  IEEE International Conference on Joint Cloud Computing (JCC), 2019, 2020, PC Co-Chair </span></p>
+<p><span class="style11">&bull;  IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) PC Co-Chair </span></p>
 
 <p><span class="style11"><strong> PC Member:</strong></span></p>
-<p><span class="style11">&nbsp;IEEE ESaaSA'14 (in conjuction with IEEE CLOSER 2014)</span></p>
-<p><span class="style11">&nbsp;IEEE IWES'14 (in conjuction with IEEE CloudCom 2014) </span></p>
-<p><span class="style11">&nbsp;IEEE FiCloud'16 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
-<p><span class="style11">&nbsp;IEEE/ACM BDCAT'16-'21 </span></p>
-<p><span class="style11">&nbsp;IEEE/ACM UCC'18-'20 </span></p>
-<p><span class="style11">&nbsp;IEEE CLOUD'21-'22' </span></p>
-<p><span class="style11">&nbsp;IJCAI'21-'22, ECAI'22 </span></p>
-<p><span class="style11">&nbsp;IEEE Workshop on Monitoring and Analysis for HPC Systems Plus Applications (HPCMASPA), in conjunction with IEEE CLUSTER 2021 </span></p>
+<p><span class="style11">&bull; IEEE ESaaSA'14 (in conjuction with IEEE CLOSER 2014)</span></p>
+<p><span class="style11">&bull; IEEE IWES'14 (in conjuction with IEEE CloudCom 2014) </span></p>
+<p><span class="style11">&bull; IEEE FiCloud'16 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
+<p><span class="style11">&bull; IEEE/ACM BDCAT'16-'21 </span></p>
+<p><span class="style11">&bull; IEEE/ACM UCC'18-'20 </span></p>
+<p><span class="style11">&bull; IEEE CLOUD'21-'22' </span></p>
+<p><span class="style11">&bull; IJCAI'21-'22, ECAI'22 </span></p>
+<p><span class="style11">&bull; IEEE Workshop on Monitoring and Analysis for HPC Systems Plus Applications (HPCMASPA), in conjunction with IEEE CLUSTER 2021 </span></p>
 
 <p><span class="style11"><strong> Conferences Organizer: </strong></span></p>
-<p><span class="style11">&nbsp;Organizer: IEEE ISORC'12, IEEE iVCE'12, CoLaB Workshop'12-'14</span></p>
+<p><span class="style11">&bull; Organizer: GECON'19, IEEE ISORC'12, IEEE iVCE'12, CoLaB Workshop'12-'14</span></p>
 
 <p><span class="style11"><strong> Reviewer: </strong> </span></p>
-<p><span class="style11">&nbsp;IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS, IEEE ISSRE, IEEE CloudCom, IEEE ICPADS, etc. </span></p>
-<p><span class="style11">&nbsp;Journals: IEEE TC, IEEE TPDS, IEEE TDSC, IEEE TKDE, IEEE TSC, IEEE TSE, IEEE TCC, IEEE Trans. on Reliability, IEEE TII, IEEE Trans. on Sustainable Computing, ACM TKDD, ACM TIST, ACM Computing Survey (CSUR); IEEE IoT Journal; IEEE Computer, Journal of Parallel and Distributed Computing (JPDC), etc.
+<p><span class="style11">&bull; Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS, IEEE ISSRE, IEEE CloudCom, IEEE ICPADS, etc. </span></p>
+<p><span class="style11">&bull; Journals: IEEE TC, IEEE TPDS, IEEE TDSC, IEEE TKDE, IEEE TSC, IEEE TSE, IEEE TCC, IEEE Trans. on Reliability, IEEE TII, IEEE Trans. on Sustainable Computing, ACM TKDD, ACM TIST, ACM Computing Survey (CSUR); IEEE IoT Journal; IEEE Computer, Journal of Parallel and Distributed Computing (JPDC), etc.
 </span></p>
 
 
  
 <p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> Updated by August 2021 </span> &nbsp; &nbsp;</p>
+<p><span class="style11">Updated by June 2022 </span> &nbsp; &nbsp;</p>
 
 </p>
 </td>
