--- a/publications.html
+++ b/publications.html
@@ -136,8 +136,13 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; Z. Wen, H. Hu, R. Yang*, B. Qian, R. Sham, R. Sun, J. Xu, P. Patel, O. Rana, S. Dustdar, R. Ranjan. Orchestrating Networked Machine Learning Applications using Autosteer, IEEE Internet Computing <a href="paper/ic2022.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; R. Yang', Y. Yang', Y. Li, K. Cui, Z. Yang, Y. Wang, J.Xu, H. Xie. RoSGAS: Adaptive Social Bot Detection with Reinforced Self-supervised GNN Architecture Search.  arXiv preprint arXiv:2206.06757
-<a href="paper/tweb2022-rosgas.pdf">[paper]</a><a href="https://arxiv.org/pdf/2206.06757">[arxiv]</a> 
+<p><span class="style11">&bull; R. Yang', Y. Yang', Y. Li, K. Cui, Z. Yang, Y. Wang, J.Xu, H. Xie. RoSGAS: Adaptive Social Bot Detection with Reinforced Self-supervised GNN Architecture Search. arXiv Preprint, arXiv:2206.06757
+<a href="paper/tweb2022-rosgas.pdf">[paper]</a><a href="https://arxiv.org/pdf/2206.06757.pdf">[arxiv]</a> 
+
+<p><span class="style11">&bull; C. Mommessin', R. Yang', N. Shakhlevich, X. Sun, S. Kumar, J. Xiao, J. Xu. Affinity-Aware Resource Provisioning for Long-Running Applications in Shared Clusters. arXiv Preprint, arXiv:2208.12738
+<a href="https://arxiv.org/pdf/2208.12738.pdf">[arxiv]</a>
+
+
 </span></p>
 
 
@@ -180,10 +185,10 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
  </span></p>
 
 
-<p><span class="style11">  &bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Text Classification Survey: From Shallow to Deep Learning.   CoRR abs/2008.00364, 2020 <a href="https://arxiv.org/abs/2008.00364">[arxiv]</a> 
+<p><span class="style11">  &bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Text Classification Survey: From Shallow to Deep Learning.  arXiv Preprint, arXiv:2008.00364, 2020 <a href="https://arxiv.org/abs/2008.00364">[arxiv]</a> 
 </span></p>
 
-<p><span class="style11">  &bull; H. Peng, J. Li, Z. Wang, R. Yang, M. Liu, M. Zhang, P. S. Yu, L. He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  CoRR abs/2008.05880, 2020 <a href="https://arxiv.org/abs/2008.05880">[arxiv]</a> 
+<p><span class="style11">  &bull; H. Peng, J. Li, Z. Wang, R. Yang, M. Liu, M. Zhang, P. S. Yu, L. He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  arXiv Preprint, arXiv:2008.05880, 2020 <a href="https://arxiv.org/abs/2008.05880">[arxiv]</a> 
 </span></p>
 
 <p><span class="style11">  &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: An Interference-aware Resource Manager for Deep Learning Systems. International Conference on Algorithms and Architectures for Parallel Processing (ICA3PP), 2020 
