--- a/publications_topics.html
+++ b/publications_topics.html
@@ -114,16 +114,19 @@ p{ margin:10px auto}
 
 
 <p><span class="style11">&bull; R. Yang', J. Zhu', X. Sun, T. Wo, C. Hu, H. Peng, J. Xiao, A. Y. Zomaya, J. Xu. QoS-Aware Co-Scheduling for Distributed Long-Running Applications on Shared Clusters, IEEE Trans. on Parallel and Distributed Systems (TPDS), 2022
-	<a href="paper/tpds2022-toposcaling.pdf">[paper]</a> 
-	</span></p>
+<a href="paper/tpds2022-toposcaling.pdf">[paper]</a> 
+</span></p>
 
 <p><span class="style11">&bull; Y. Song, L. Jiao, R. Yang, T. Wo and J. Xu. Incentivizing Online Content Caching in Distributed Edge Networks via Auction-Based Subsidization. 19th IEEE International Conference on Sensing, Communication, and Networking (SECON), 2022
-	<a href="paper/secon2022.pdf">[paper]</a> 
-	</span></p>
+<a href="paper/secon2022.pdf">[paper]</a> 
+</span></p>
 
 <p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC), 2022
-	 <a href="paper/sc2022.pdf">[paper]</a> 
-	</span></p>
+<a href="paper/sc2022.pdf">[paper]</a> 
+</span></p>
+	
+<p><span class="style11">&bull; C. Mommessin', R. Yang', N. Shakhlevich, X. Sun, S. Kumar, J. Xiao, J. Xu. Affinity-Aware Resource Provisioning for Long-Running Applications in Shared Clusters. arXiv Preprint, arXiv:2208.12738
+<a href="https://arxiv.org/pdf/2208.12738.pdf">[arxiv]</a>
 
 <p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 
 <a href="paper/tpds2021-horus.pdf">[paper]</a> 
@@ -249,17 +252,16 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; H. Peng, J. Li, Y. Song, R. Yang, R. Ranjan, P. S. Yu, L. He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 <a href="paper/tkdd2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks, ACM Trans. on Information Systems (TOIS), 2021 <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
+<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks, ACM Trans. on Information Systems (TOIS), 2021 <a href="paper/tois2021-riognn.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf">[paper]</a><a href="https://arxiv.org/abs/2008.00364">[arxiv]</a> 
+<p><span class="style11">&bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">&bull; H. Peng, J. Li, Z. Wang, R. Yang, M. Liu, M. Zhang, P. S. Yu, L. He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021.pdf">[paper]</a><a href="https://arxiv.org/abs/2008.05880">[arxiv]</a> 
+<p><span class="style11">&bull; H. Peng, J. Li, Z. Wang, R. Yang, M. Liu, M. Zhang, P. S. Yu, L. He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021.pdf">[paper]</a>  
 </span></p>
 
-<p><span class="style11">&bull; B. Qian, J. Su, Z. Wen, D.N. Jha, Y. Li, Y. Guan, D. Puthal, P. James, R. Yang, A. Y. Zomaya, O. Rana, L. Wang, R. Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR), 2020 
-<a href="http://arxiv.org/abs/1910.05433">[arxiv]</a><a href="paper/csur2020.pdf">[paper]</a> </span></p>
+<p><span class="style11">&bull; B. Qian, J. Su, Z. Wen, D.N. Jha, Y. Li, Y. Guan, D. Puthal, P. James, R. Yang, A. Y. Zomaya, O. Rana, L. Wang, R. Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR), 2020 <a href="paper/csur2020.pdf">[paper]</a> </span></p>
 
 
 <p><span class="style11">&bull; H. Peng, J. Li, S. Wang, L. Wang, Q. Gong, R. Yang, B. Li, L. He and P. S. Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf">[paper]</a><span class="red"> (Highly Cited Paper)</span>
