--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@ p{ margin:10px auto}
 
 <span class="STYLE15"> 
 &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;  <strong>Renyu Yang</strong> &nbsp; 
-<img src="icons/yin.gif" width="50" alt="Renyu" border="0" title="Renyu Yang" />  
+<img src="icons/yin.gif" width="40" alt="Renyu" border="0" title="Renyu Yang" />  
 </span>
 
 <span class="STYLE15"> &nbsp;
-<img src="images/uol.jpg" width="150" alt="University of Leeds" border="0" title="University of Leeds" /> 
+<img src="images/uol.jpg" width="130" alt="University of Leeds" border="0" title="University of Leeds" /> 
 <!--img src="images/edgetic.jpg" width="220" height="60" alt="Renyu" border="0" title="Edgetic" /-->
-<img src="images/ati.png" width="100" alt="Alan Turing Institute" border="0" title="Alan Turing Institute" /> 
+<img src="images/ati2.png" width="80"  alt="Alan Turing Institute" border="0" title="Alan Turing Institute" /> 
 <img src="images/lida.png" width="150" alt="LIDA" border="0" title="LIDA" /> 
 <img src="images/bdbc.png" width="160" alt="BDBC" border="0" title="BDBC" /> 
 <img src="images/beihang.jpg" width="150"  alt="Beihang University" border="0" title="Beihang University" />
@@ -133,8 +133,8 @@ p{ margin:10px auto}
 
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (LS):&nbsp; 3.25, Sir William Henry Bragg Building, Leeds, UK, LS2 9BW &nbsp;</p>
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: R. Yang1 AT leeds DOT ac DOT uk (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp;&nbsp;
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: &nbsp; r.yang1 AT leeds DOT ac DOT uk (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp; 
 <a href="http://uk.linkedin.com/pub/renyu-yang/60/b5b/96/" target="_blank">
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
 
@@ -199,7 +199,7 @@ p{ margin:10px auto}
 <div id="div_news">
 <p class="Bolder">What's New</p>
 
-<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI-2022.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), Deadline: 30 Sept 2022 </span></p>
+<p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI-2022.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), new deadline: <span class="red">30 Sept 2023</span> </span></p>
 
 <p><span class="style11">(23/08/2022) Our work on QoS-Aware Co-Scheduling is accepted by IEEE Trans. on Parallel and Distributed Systems. Big congrats to Jianyong and Xiaoyang! </span></p>
 
@@ -321,7 +321,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
-<p><span class="style11">&bull; Large-scale GPU Cluster Scheduling, Industry-funded Collaboration, Co-I, 2022.4 - present </span></p> 
+<p><span class="style11">&bull; Large-scale GPU Cluster Scheduling, Industry-funded Collaboration, Co-I, 2022.7 - present </span></p> 
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - present </span></p> 
 
@@ -437,7 +437,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
 
-<p><span class="style11">&bull; PC Member: IJCAI'21-'22, ECAI'21-'22, IEEE CLOUD'20-'22, ACM/IEEE UCC'18-'22,  IEEE/ACM BDCAT'16-'22, etc. </span></p>
+<p><span class="style11">&bull; PC Member: IJCAI'21-'22, ECAI'21-'22, IEEE CLOUD'20-'22, ACM/IEEE UCC'18-'22,  IEEE/ACM BDCAT'16-'22, IEEE HPCC'21-'22 etc. </span></p>
 
 
 <p><span class="style11">&bull; Journal Reviewers: TPDS, TDSC, TC, TKDE, TSC, TSE, TCC, TKDD, CSUR, etc. </span></p> 
