--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ p{ margin:10px auto}
 </div>
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work, the more luck I seem to have." Thomas Jefferson</p>
 
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow</p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lead Research Fellow</p>
 
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, <a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a></p>
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a></p>
@@ -221,15 +221,39 @@ p{ margin:10px auto}
 <div id="div_bio">
 
 <p class="Bolder">Short Bio</p> 
-<p><span class="style11"> I am currently a UK EPSRC-funded research fellow at the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, <a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a>, and <a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, Beijing, China. I was a research scientist at Edgetic Ltd., a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
-I have been (co-)leading several China/UK national and international projects in terms of distributed resource management and scheduling, massive-scale data analysis for intelligent decision making, and deep learning systems. We build large-scale resource management infrastructures and system profiling framework to support those functionalities. 
-</span></p>
 
-<p><span class="style11">  I has published more than 50 peer-reviewed papers, in the field of distributed systems, cloud computing, data centric engineering, and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE TPDS, TC, TKDE, TNNLS, TOIS, VLDB, SC, ICDCS, DSN, SECON, CCGRID, SoCC, etc. I am a recipient of the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral Enrichment Award 2022 for resilient deep reinforcement learning, and the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.  
-	</span></p>
+<p><span class="style11"> I am currently a lead Research Fellow funded by UK EPSRC, 
+	with the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, 
+	<a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a>, 
+	and <a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a>, 
+	University of Leeds, UK. I am also a visiting research scientist with the
+	<a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, 
+	Beijing, China. Prior to this, I was a research scientist at Edgetic Ltd., a UK-based high-tech spin-out company 
+	that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of 
+	data center efficiency and intelligence. During 2014 to 2016, I was also with Alibaba Group, participating in the 
+	development and research on intelligent resource scheduling and performance optimization at Internet scale. 
+	My research interests include large-scale dependable distributed systems, trustworthy data-centric engineering, 
+	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
+</span>
 
-<p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn" style="text-decoration: none">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I co-founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group in COLAB. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE and ACM.
-</span></p>
+<p><span class="style11"> I have published 50+ refereed journal and conference papers, including top ACM/IEEE Transactions and conference 
+	proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, ACM Computing Surveys (CSUR), VLDB, SC, ICDCS, DSN, SoCC, SECON, 
+	etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
+	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
+	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
+	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.
+</span>
+
+<p><span class="style11"> I co-authored/co-led several national and international projects, including UK EPSRC, Innovate UK, 
+	EU Horizon 2020, UK Alan Turing Institute grants, China 973/863/Key R&D Programme, etc., worth more than £8 million over 
+	the last five years. I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
+	Alibaba and Beihang University. I developed strong links with China-UK Computer 
+	Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, 
+	Lancaster University, Newcastle University upon Tyne, etc.). I served as program co-chairs of IEEE International Conference on Joint Cloud Computing (JCC) 
+	2019 and 2020, and area chair of IEEE International Conference on Cloud Computing (CLOUD) 2021, guest editor of Big Data 
+	and Cognitive Computing Journal, review editor in Editorial Board of Frontiers in Big Data and Frontiers in HPC, and 
+	program committee member of top-tier conferences including IJCAI, ECAI, AAAI, CLOUD, HPCC, etc. 
+</span>
 
 </div>
 
@@ -249,7 +273,7 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="style11">&bull;  2007.9 - 2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&bull;  2011.9 - 2017.1: &nbsp;&nbsp; PhD. Computer Science (with Distinction Honor), supervised by Prof. Jie Xu and Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull;  2011.9 - 2017.2: &nbsp;&nbsp; PhD. Computer Science (with Distinction Honor), supervised by Prof. Jie Xu and Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&bull;  2011.9 - 2017.1: &nbsp;&nbsp; Exchange PhD. Student (funded by China 973 iVCE Grant and EPSRC CoLab Grant), supervised by Prof. Jie Xu and <a href="http://www.paultownend.com/" style="text-decoration: none">Dr. Paul Townend</a>, <a href="http://www.leeds.ac.uk" target="_blank" style="text-decoration: none"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
@@ -261,11 +285,11 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="style11">&bull; 2016.4 - 2016.5: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&bull; 2017.3 - 2018.4: &nbsp; Research Scientist and Project Director, Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull; 2017.3 - 2018.5: &nbsp; Research Scientist and Project Director, Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
  
 <p><span class="style11">&bull; 2018.2 - 2018.2: &nbsp; Visiting Researcher (work with Dr. Peter Garraghan), &nbsp; Lancaster University, UK &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&bull; 2018.5 - 2020.8: &nbsp; Research Scientist, Edgetic Ltd., UK </span></p> 
+<p><span class="style11">&bull; 2018.6 - 2020.8: &nbsp; Research Scientist, Edgetic Ltd., UK </span></p> 
 
 <p><span class="style11">&bull; 2017.10 - 2020.8: &nbsp; Adjunct Research Fellow at University of Leeds, UK </span></p>
 </div>
@@ -456,12 +480,13 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (2017年度中国电子学会科技进步特等奖) </p>
 <p><span class="style11">&bull;   The State Scientific and Technological Progress Award, 1st Prize Nominee, 2018 (2018年度国家科学进步一等奖提名) </p>
 
-<p><span class="style11">&bull;   <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
+<p><span class="style11">&bull;  <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
 <p><span class="style11">&bull;  <strong>Guanghua Scholarship Award </strong> for outstanding students, 2014 </p>
-<p><span class="style11">&bull;   <strong>Best Paper Award</strong> of the IEEE 11th International Symposium on Autonomous Decentralized System(ISADS), 2013 </span></p>
+<p><span class="style11">&bull;  <strong>Best Paper Award</strong> of the IEEE 11th International Symposium on Autonomous Decentralized System(ISADS), 2013 </span></p>
 <p><span class="style11">&bull;  <strong>Excellent Academic Award</strong> of The Institute of Advanced Computing Technology, Beihang University
 </span></p> 
-<p><span class="style11">&bull;   <strong>Excellence Student Scholarship</strong> of Beihang University</span></p>
+<p><span class="style11">&bull;  <strong>Excellence Student Scholarship</strong> of Beihang University</span></p>
+<p><span class="style11">&bull;  <strong>Second Prize of Fengru Cup</strong>, 2010, 2009 </span></p>
 </div>
 
 
